--- a/index.html
+++ b/index.html
@@ -1,3 +1,65 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Resume</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<header>
+    <h1>John Doe</h1>
+    <p>Senior Analyst at Deloitte Knowledge Center</p>
+</header>
+
+<div class="container">
+
+    <div class="section">
+        <h2>Summary</h2>
+        <p>A dedicated and detail-oriented Senior Analyst with a strong background in data analysis and business insights. Skilled in leveraging advanced analytical techniques to drive decision-making and achieve organizational goals.</p>
+    </div>
+
+    <div class="section skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>Data Analysis</li>
+            <li>SQL & Databases</li>
+            <li>Microsoft Excel & Power BI</li>
+            <li>Project Management</li>
+            <li>Business Communication</li>
+        </ul>
+    </div>
+
+    <div class="section experience">
+        <h2>Experience</h2>
+        <ul>
+            <li>
+                <strong>Senior Analyst</strong>, Deloitte Knowledge Center, Parel<br>
+                <em>July 2024 - Present</em><br>
+                <p>Responsible for analyzing complex data sets to provide actionable business insights and support strategic decision-making. Collaborate with cross-functional teams to develop data-driven solutions.</p>
+            </li>
+        </ul>
+    </div>
+
+    <div class="section education">
+        <h2>Education</h2>
+        <ul>
+            <li>
+                <strong>Bachelor of Commerce</strong>, XYZ University<br>
+                <em>2019 - 2023</em><br>
+                <p>Specialization in Finance with a focus on data analysis and business economics.</p>
+            </li>
+        </ul>
+    </div>
+
+    <div class="section contact-info">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:john.doe@example.com">john.doe@example.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe">linkedin.com/in/johndoe</a></p>
+    </div>
+
+</div>
+
+</body>
+</html>
