--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Resume</title>
+    <title>Janhavi Tayde</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
-    <h1>John Doe</h1>
-    <p>Senior Analyst at Deloitte Knowledge Center</p>
+    <h1>Janhavi Tayde</h1>
+    <p>Senior Analyst at Deloitte</p>
 </header>
 
 <div class="container">
 
     <div class="section">
         <h2>Summary</h2>
-        <p>A dedicated and detail-oriented Senior Analyst with a strong background in data analysis and business insights. Skilled in leveraging advanced analytical techniques to drive decision-making and achieve organizational goals.</p>
+        <p>A dedicated and detail-oriented Senior Analyst with a strong background in data analysis. Currently working in Audit and Assurance - IT Audit. Skilled in leveraging advanced analytical techniques to drive decision-making and achieve organizational goals.</p>
     </div>
 
     <div class="section skills">
@@ -35,9 +35,9 @@
         <h2>Experience</h2>
         <ul>
             <li>
-                <strong>Senior Analyst</strong>, Deloitte Knowledge Center, Parel<br>
+                <strong>Senior Analyst</strong>, Deloitte<br>
                 <em>July 2024 - Present</em><br>
-                <p>Responsible for analyzing complex data sets to provide actionable business insights and support strategic decision-making. Collaborate with cross-functional teams to develop data-driven solutions.</p>
+                <p></p>
             </li>
         </ul>
     </div>
@@ -46,17 +46,17 @@
         <h2>Education</h2>
         <ul>
             <li>
-                <strong>Bachelor of Commerce</strong>, XYZ University<br>
-                <em>2019 - 2023</em><br>
-                <p>Specialization in Finance with a focus on data analysis and business economics.</p>
+                <strong>Bachelor of Computer Engineering </strong>, Mumbai University<br>
+                <em>2021 - 2024</em><br>
+                <p>Specialization in Machine Learning and analysis of data.</p>
             </li>
         </ul>
     </div>
 
     <div class="section contact-info">
         <h2>Contact</h2>
-        <p>Email: <a href="mailto:john.doe@example.com">john.doe@example.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe">linkedin.com/in/johndoe</a></p>
+        <p>Email: <a href="mailto:janhavitayde2003@gmail.com">janhavitayde2003@gmail.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/janhavitayde">linkedin.com/in/janhavitayde</a></p>
     </div>
 
 </div>
